# django-htmx-admin

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_htmx_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htmx_admin/: __init__.py  admin.py  middleware.py  mixins.py  views.py
htmx_admin/static/htmx_admin/: htmx-admin.css  htmx-admin.js  htmx.min.js
htmx_admin/templates/htmx_admin/: change_list.html
htmx_admin/templates/htmx_admin/grappelli/: change_list.html
htmx_admin/templates/htmx_admin/partials/: edit_cell.html  modal_form.html  table_body.html  table_cell.html  table_row.html  toast.html  toast_container.html
htmx_admin/templatetags/: __init__.py  htmx_admin_tags.py
tests/: __init__.py  conftest.py  settings.py  test_admin.py  test_middleware.py  test_mixins.py  urls.py
