[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-htmx-admin"
version = "1.0.1"
description = "HTMX-Powered Django Admin Enhancement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Siddiq Umer", email = "hafiz.siddiq.umer@gmail.com"}
]
keywords = ["django", "admin", "htmx", "ajax", "inline-editing", "modal", "toast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.0",
    "django-htmx>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "coverage",
    "flake8",
    "black",
    "isort",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/hafizSiddiq7675/django-htmx-admin"
Documentation = "https://github.com/hafizSiddiq7675/django-htmx-admin#readme"
Repository = "https://github.com/hafizSiddiq7675/django-htmx-admin"
"Bug Tracker" = "https://github.com/hafizSiddiq7675/django-htmx-admin/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "demo_project", "demo_project.*"]

[tool.setuptools.package-data]
htmx_admin = [
    "templates/htmx_admin/*.html",
    "templates/htmx_admin/partials/*.html",
    "templates/htmx_admin/grappelli/*.html",
    "static/htmx_admin/*.js",
    "static/htmx_admin/*.css",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
